k8s/twelve_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: twelvecloudbs
    app.kubernetes.io/name: twelvecloudbs
  name: twelvecloudbs
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: twelvecloudbs
      app.kubernetes.io/name: twelvecloudbs
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: twelvecloudbs
        app.kubernetes.io/name: twelvecloudbs
    spec:
      volumes:
        - name: twelvecloudbs-pv
          persistentVolumeClaim:
            claimName: twelvecloudbs
      containers:
      - env:
        - name: POSTGRES_HOST
          valueFrom:
            configMapKeyRef:
              key: postgres_host
              name: twelve-config
        - name: POSTGRES_DB
          valueFrom:
            configMapKeyRef:
              key: postgres_db
              name: twelve-config
        - name: AXELOR_USER
          valueFrom:
            secretKeyRef:
              key: username
              name: axelor.acid-axelor-cluster.credentials.postgresql.acid.zalan.do
        - name: AXELOR_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: axelor.acid-axelor-cluster.credentials.postgresql.acid.zalan.do
        image: twelvecloudbs/nabla:1.0.3
        volumeMounts:
        - mountPath: /usr/local/tomcat/uploads
          name: twelvecloudbs-pv
        
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 12000
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: twelvecloudbs
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
