k8s/twelve_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toptest-balder.nablanalytics.com
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    namespace: default

spec:
  ingressClassName: nginx
  rules:
    - host: toptest-balder.nablanalytics.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: twelvecloudbs
                port:
                  number: 80
            path: /
